--- a/.github/workflows/get-proxies.yml
+++ b/.github/workflows/get-proxies.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     # - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
-    - cron: '0 0-23/3 * * *'
+    - cron: '0 */12 * * *'
 
 jobs:
   main:
